--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -2,10 +2,11 @@
     color: white;
     position: relative;
     padding-bottom: 2rem;
+    z-index: 1;
 }
 
 .hero-container {
-    justify-content: space-between !important; /* estou tendo que colocar !important  */
+    justify-content: space-around !important; /* estou tendo que colocar !important  */
     align-items: flex-end !important; /* pq a propriedade flexCenter está sobescrevendo a outra. */
 }
 
@@ -80,3 +81,32 @@
     height: 100%;
 }
 
+@media (max-width: 640px) {
+    .hero-container{
+        margin-top: 2rem;
+    }
+    .hero-title>h1 {
+        font-size: 2.5rem;
+        line-height: 3rem;
+    }
+
+    .image-container {
+        width: 95%;
+        height: 25rem;
+    }
+
+    .stats {
+        justify-content: center !important;
+        gap: 1rem;
+    }
+    .hero-right {
+        width: 100%;
+    }
+
+    .stat>:nth-child(1) {
+        font-size: 1.5rem;
+    }
+    .stat>:nth-child(2) {
+        font-size: 0.8rem;
+    }
+}
