--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,6 @@
 .h-wrapper {
     color: white;
+    z-index: 99;
 }
 
 .h-container{
@@ -28,6 +29,7 @@
     }
 
     .h-menu {
+        z-index: 99;
         color: var(--black);
         position: absolute;
         top: 3rem;
