--- a/src/components/Value/Value.css
+++ b/src/components/Value/Value.css
@@ -49,3 +49,15 @@
 .accordionButton .primaryText {
     font-size: 1.1rem;
 }
+
+@media (max-width: 1024) {
+    .v-container {
+        flex-direction: column !important;
+    }
+
+    @media (max-width: 768px) {
+        .accordionButton .primaryText{
+            font-size: 0.8rem;
+        }
+    }
+}
