--- a/src/components/Value/Value.css
+++ b/src/components/Value/Value.css
@@ -50,7 +50,7 @@
     font-size: 1.1rem;
 }
 
-@media (max-width: 1024) {
+@media (max-width: 1024px) {
     .v-container {
         flex-direction: column !important;
     }
