--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -68,11 +68,14 @@
     .c-right {
         justify-content: center;
     }
+    .contactModes {
+        width: 100%;
+    }
     .row {
         flex-direction: column;
         width: 100%;
     }
     .mode {
-        width: 100%;
+        width: 100% ;
     }
 }
